# OsWorld-OpenEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  eval.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
Build_process/: 01_scenarios_and_difficulties.md  02_grading_mechanics.md  03_reward_shaping.md  04_grpo_training_roadmap.md  05_agnostic_training_improvements.md  README.md
openenv_OsWorld.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  OsWorld_environment.py  __init__.py  app.py  graders.py  rewards.py  tasks.py
