[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-OsWorld"
version = "0.1.0"
description = "Osworld environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.1",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    "faker>=20.0.0",
    "numpy>=1.20.0",
    "pandas>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "html5lib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m OsWorld.server.app
server = "OsWorld.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["OsWorld", "OsWorld.server"]
package-dir = { "OsWorld" = ".", "OsWorld.server" = "server" }